--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,15 +1,28 @@
+# backend/requirements.txt - Compatible Versions that Work Together
+
 fastapi==0.104.1
 uvicorn[standard]==0.24.0
 sqlalchemy==2.0.23
 alembic==1.12.1
+
+# Async database drivers
+asyncpg==0.29.0
 psycopg2-binary==2.9.7
-pydantic==2.5.0
+
+# Pydantic - Use 2.4.2 for better compatibility
+pydantic==2.4.2
 pydantic-settings==2.1.0
-python-multipart==0.0.7
+
+# Form handling - Use version compatible with FastAPI Users
+python-multipart==0.0.6
+
+# Authentication and security - Use older compatible versions
 python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
-fastapi-users==12.1.3
+fastapi-users==12.1.2
 fastapi-users-db-sqlalchemy==6.0.1
+
+# Other dependencies
 oci==2.112.1
 pillow==10.4.0
 PyPDF2==3.0.1
