Modifications to backend

--- a/.gitignore
+++ b/.gitignore
@@ -3,12 +3,14 @@
 # =============================================================================
 # ENVIRONMENT & SECRETS
 # =============================================================================
-.env
+# Allow development .env files, ignore production/sensitive ones
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
-*.env
+.env.production
+.env.staging
+*.env.secret
 
 # Secret keys and sensitive config
 secrets/
@@ -210,10 +212,7 @@ frontend/build/
 frontend/dist/
 
 # Create React App
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+# Allow our development .env files, block only the sensitive ones
 
 # =============================================================================
 # DATABASE
@@ -258,14 +257,45 @@ logs/
 *.log
 log/
 
-# OS generated files
+# =============================================================================
+# OS GENERATED FILES
+# =============================================================================
+# macOS
 .DS_Store
-.DS_Store?
+.AppleDouble
+.LSOverride
+Icon
 ._*
+.DocumentRevisions-V100
+.fseventsd
 .Spotlight-V100
+.TemporaryItems
 .Trashes
-ehthumbs.db
+.VolumeIcon.icns
+.com.apple.timemachine.donotpresent
+.AppleDB
+.AppleDesktop
+Network Trash Folder
+Temporary Items
+.apdisk
+
+# Windows
 Thumbs.db
+ehthumbs.db
+Desktop.ini
+$RECYCLE.BIN/
+*.cab
+*.msi
+*.msm
+*.msp
+*.lnk
+
+# Linux
+*~
+.fuse_hidden*
+.directory
+.Trash-*
+.nfs*
 
 # =============================================================================
 # IDE & EDITORS
