--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-version: '3.8'
 
 services:
   db:
@@ -16,25 +15,35 @@ services:
       interval: 30s
       timeout: 10s
       retries: 3
+    networks:
+      - family-tree-network
 
   api:
     build: ./backend
     ports:
       - "8000:8000"
+    env_file:
+      - ./backend/.env
     environment:
-      - DATABASE_URL=postgresql://family_tree_user:family_tree_password@db:5432/family_tree_db
-      - SECRET_KEY=your-secret-key-change-this-in-production
-      - ORACLE_NAMESPACE=your-oracle-namespace
-      - ORACLE_BUCKET_NAME=family-tree-files
-      - ORACLE_ACCESS_KEY=your-access-key
-      - ORACLE_SECRET_KEY=your-secret-key
-      - ORACLE_REGION=us-ashburn-1
+      # Override DATABASE_URL for container networking
+      - DATABASE_URL=postgresql+asyncpg://family_tree_user:family_tree_password@db:5432/family_tree_db
     depends_on:
       db:
         condition: service_healthy
     volumes:
       - ./backend:/app
+      - api_uploads:/app/uploads
     command: uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload
+    networks:
+      - family-tree-network
+    restart: unless-stopped
 
 volumes:
   postgres_data:
+    driver: local
+  api_uploads:
+    driver: local
+
+networks:
+  family-tree-network:
+    driver: bridge
