Added firestore setup

--- a/backend/.env
+++ b/backend/.env
@@ -1,65 +1,100 @@
 # ==================================================================
-# FAMILY TREE API - DEVELOPMENT ENVIRONMENT CONFIGURATION
+# FAMILY TREE API - FIRESTORE DEVELOPMENT ENVIRONMENT
 # ==================================================================
-# This file contains default development settings that work out of
-# the box. For production, copy this file and update with secure values.
+# Clean configuration for Firebase/Firestore-based application
+# This file contains default development settings that work out of the box.
 
 # ==================================================================
-# DATABASE CONFIGURATION
+# GOOGLE CLOUD / FIREBASE CONFIGURATION
 # ==================================================================
-# Local development database (matches docker-compose.yml)
-DATABASE_URL=postgresql+asyncpg://family_tree_user:family_tree_password@localhost:5432/family_tree_db
 
-# For Docker Compose (when running backend in container)
-# DATABASE_URL=postgresql+asyncpg://family_tree_user:family_tree_password@db:5432/family_tree_db
+# Google Cloud Project ID (replace with your project ID)
+GOOGLE_CLOUD_PROJECT=family-tree-app-465402
 
-# ==================================================================
-# SECURITY CONFIGURATION
-# ==================================================================
-# IMPORTANT: Generate a secure secret key for production using:
-# python -c "import secrets; print(secrets.token_urlsafe(32))"
-SECRET_KEY=dev-secret-key-change-this-in-production-use-secrets-token-urlsafe
+# Firebase Service Account Key (for local development)
+# Leave empty to use Application Default Credentials (for Cloud Run)
+FIREBASE_CREDENTIALS_PATH=serviceAccountKey.json
 
-# JWT Configuration
-ALGORITHM=HS256
-ACCESS_TOKEN_EXPIRE_MINUTES=30
+# Firestore Collection Prefix (for testing isolation)
+# Leave empty for production, use "test_" for testing
+FIRESTORE_COLLECTION_PREFIX=
+
+# Google Cloud Storage Bucket Name
+GCS_BUCKET_NAME=family-tree-app-files
 
 # ==================================================================
 # APPLICATION SETTINGS
 # ==================================================================
-DEBUG=true
+
+# Application Metadata
 PROJECT_NAME=Family Tree API
-VERSION=1.0.0
+VERSION=2.0.0
+DEBUG=true
+
+# Security (still used for any custom JWT operations)
+SECRET_KEY=dev-secret-key-change-this-in-production-use-firebase-auth-instead
+ALGORITHM=HS256
+ACCESS_TOKEN_EXPIRE_MINUTES=30
+
+# ==================================================================
+# CORS CONFIGURATION
+# ==================================================================
 
 # CORS Origins (comma-separated list)
 ALLOWED_ORIGINS=http://localhost:3000,http://localhost:3001,http://127.0.0.1:3000
 
 # ==================================================================
-# FILE STORAGE CONFIGURATION
+# FILE UPLOAD CONFIGURATION
 # ==================================================================
-# File upload limits
+
+# File Upload Limits (10MB)
 MAX_FILE_SIZE=10485760
-ALLOWED_FILE_TYPES=image/jpeg,image/png,image/gif,image/webp,application/pdf
 
-# Local development file storage
-FILE_STORAGE_TYPE=local
-UPLOAD_PATH=uploads
+# Allowed File Types (comma-separated list)
+ALLOWED_FILE_TYPES=image/jpeg,image/png,image/gif,image/webp,application/pdf,text/plain,video/mp4,video/avi,video/mov,audio/mpeg,audio/wav
 
 # ==================================================================
-# ORACLE OBJECT STORAGE (OPTIONAL - FOR PRODUCTION)
+# LOGGING CONFIGURATION
 # ==================================================================
-# Leave empty for local development, configure for production deployment
-ORACLE_NAMESPACE=
-ORACLE_BUCKET_NAME=family-tree-files
-ORACLE_ACCESS_KEY=
-ORACLE_SECRET_KEY=
-ORACLE_REGION=us-ashburn-1
+
+LOG_LEVEL=INFO
+LOG_FORMAT=%(asctime)s - %(name)s - %(levelname)s - %(message)s
 
 # ==================================================================
-# DEVELOPMENT NOTES
+# DEVELOPMENT SETTINGS
 # ==================================================================
-# 1. This configuration works with the included docker-compose.yml
-# 2. The database will be created automatically when using Docker
-# 3. For local development without Docker, ensure PostgreSQL is running
-# 4. Run database migrations with: alembic upgrade head
-# 5. Start the server with: uvicorn app.main:app --reload
+
+# Testing
+TESTING=false
+TEST_DATABASE_PREFIX=test_
+
+# Development Features
+ENABLE_API_DOCS=true
+ENABLE_CORS=true
+
+# Rate Limiting (requests per minute)
+API_RATE_LIMIT_PER_MINUTE=100
+FILE_UPLOAD_RATE_LIMIT_PER_MINUTE=10
+
+# ==================================================================
+# FIREBASE PROJECT SETUP INSTRUCTIONS
+# ==================================================================
+# 
+# To set up Firebase for this project:
+#
+# 1. Create a Firebase project at https://console.firebase.google.com/
+# 2. Enable Firestore Database in Native mode
+# 3. Enable Authentication with Email/Password provider
+# 4. Enable Cloud Storage
+# 5. Generate a service account key:
+#    - Go to Project Settings > Service Accounts
+#    - Click "Generate new private key"
+#    - Save as `serviceAccountKey.json` in the backend directory
+# 6. Update GOOGLE_CLOUD_PROJECT above with your project ID
+#
+# For Cloud Run deployment:
+# 1. Set FIREBASE_CREDENTIALS_PATH to empty string
+# 2. Ensure Cloud Run service account has Firestore permissions
+# 3. Update GOOGLE_CLOUD_PROJECT with your production project ID
+#
+# ==================================================================
