Added firestore repositories

--- a/backend/.env
+++ b/backend/.env
@@ -1,18 +1,17 @@
 # ==================================================================
-# FAMILY TREE API - FIRESTORE DEVELOPMENT ENVIRONMENT
+# FAMILY TREE API - GOOGLE CLOUD FIRESTORE ENVIRONMENT
 # ==================================================================
-# Clean configuration for Firebase/Firestore-based application
-# This file contains default development settings that work out of the box.
+# Clean configuration for Google Cloud Firestore-based application
 
 # ==================================================================
-# GOOGLE CLOUD / FIREBASE CONFIGURATION
+# GOOGLE CLOUD CONFIGURATION
 # ==================================================================
 
 # Google Cloud Project ID (replace with your project ID)
 GOOGLE_CLOUD_PROJECT=family-tree-app-465402
 
-# Firebase Service Account Key (for local development)
-# Leave empty to use Application Default Credentials (for Cloud Run)
+# Service Account Key Path (for local development)
+# Leave empty to use Application Default Credentials (for Cloud deployment)
 FIREBASE_CREDENTIALS_PATH=serviceAccountKey.json
 
 # Firestore Collection Prefix (for testing isolation)
@@ -20,7 +19,7 @@ FIREBASE_CREDENTIALS_PATH=serviceAccountKey.json
 FIRESTORE_COLLECTION_PREFIX=
 
 # Google Cloud Storage Bucket Name
-GCS_BUCKET_NAME=family-tree-app-files
+GCS_BUCKET_NAME=your-project-id-files
 
 # ==================================================================
 # APPLICATION SETTINGS
@@ -32,7 +31,7 @@ VERSION=2.0.0
 DEBUG=true
 
 # Security (still used for any custom JWT operations)
-SECRET_KEY=dev-secret-key-change-this-in-production-use-firebase-auth-instead
+SECRET_KEY=dev-secret-key-change-this-in-production
 ALGORITHM=HS256
 ACCESS_TOKEN_EXPIRE_MINUTES=30
 
@@ -77,24 +76,26 @@ API_RATE_LIMIT_PER_MINUTE=100
 FILE_UPLOAD_RATE_LIMIT_PER_MINUTE=10
 
 # ==================================================================
-# FIREBASE PROJECT SETUP INSTRUCTIONS
+# GOOGLE CLOUD PROJECT SETUP INSTRUCTIONS
 # ==================================================================
 # 
-# To set up Firebase for this project:
+# To set up Google Cloud for this project:
 #
-# 1. Create a Firebase project at https://console.firebase.google.com/
-# 2. Enable Firestore Database in Native mode
-# 3. Enable Authentication with Email/Password provider
-# 4. Enable Cloud Storage
-# 5. Generate a service account key:
-#    - Go to Project Settings > Service Accounts
-#    - Click "Generate new private key"
+# 1. Create a Google Cloud project at https://console.cloud.google.com/
+# 2. Enable the Firestore API
+# 3. Enable the Cloud Storage API
+# 4. Create a Firestore database in Native mode
+# 5. Create a service account:
+#    - Go to IAM & Admin > Service Accounts
+#    - Click "Create Service Account"
+#    - Give it roles: "Cloud Datastore User" and "Storage Admin"
+#    - Create and download a JSON key
 #    - Save as `serviceAccountKey.json` in the backend directory
 # 6. Update GOOGLE_CLOUD_PROJECT above with your project ID
 #
-# For Cloud Run deployment:
-# 1. Set FIREBASE_CREDENTIALS_PATH to empty string
-# 2. Ensure Cloud Run service account has Firestore permissions
-# 3. Update GOOGLE_CLOUD_PROJECT with your production project ID
+# Alternative authentication methods:
+# 1. Use gcloud: `gcloud auth application-default login`
+# 2. Set GOOGLE_APPLICATION_CREDENTIALS environment variable
+# 3. Use attached service account (for Cloud Run deployment)
 #
 # ==================================================================
