--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,4 +1,4 @@
-# backend/requirements.txt - Clean Firestore-based Dependencies
+# backend/requirements.txt - Pure Google Cloud Dependencies
 
 # ================================================================
 # CORE WEB FRAMEWORK
@@ -7,11 +7,8 @@ fastapi==0.104.1
 uvicorn[standard]==0.24.0
 
 # ================================================================
-# GOOGLE CLOUD / FIREBASE DEPENDENCIES
+# GOOGLE CLOUD DEPENDENCIES (NO FIREBASE)
 # ================================================================
-
-# Firebase Admin SDK for authentication and Firestore
-firebase-admin==6.4.0
 
 # Google Cloud Firestore client
 google-cloud-firestore==2.13.1
@@ -22,13 +19,16 @@ google-cloud-storage==2.10.0
 # Google Cloud Core (dependency management)
 google-cloud-core==2.3.3
 
+# Google Auth for authentication
+google-auth==2.23.4
+
 # ================================================================
 # DATA VALIDATION AND SERIALIZATION
 # ================================================================
 
 # Pydantic for data validation
-pydantic==2.4.2
-pydantic-settings==2.1.0
+pydantic==2.9.2
+pydantic-settings==2.6.1
 
 # ================================================================
 # HTTP AND FILE HANDLING
@@ -89,10 +89,3 @@ structlog==23.2.0
 
 # Monitoring and health checks
 prometheus-client==0.19.0
-
-# ================================================================
-# ASTROLOGY FEATURES (Optional)
-# ================================================================
-
-# For advanced astrology calculations (if implementing complex compatibility)
-# pyephem==9.99  # Uncomment if adding astronomical calculations
